fix padding on mobile

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -2,11 +2,14 @@
   padding: 178px 0;
   background-color: rgba(20,25,29,0.95);
   color: #fff;
+  @include r(768) {
+    padding: 80px 0;
+  }
   &__inner {
     display: flex;
     align-items: center;
     justify-content: center;
-    @include r(576) {
+    @include r(768) {
       flex-direction: column;
       justify-content: center;
       gap:20px;
@@ -17,6 +20,8 @@
     font-size: 12px;
   }
   &__logo {
-    order: -1;
+    @include r(768) {
+      order: -1;
+    }
   }
 }
